<resources>
    <string name="app_name">Assyst</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_notify">NotifyActivity</string>

    <string name="alertYes"><font color="red">Yes</font></string>

    <string name="audio_prompt">Choose a audio configure</string>
    <string-array name="audio_arrays">
        <item>MUTE</item>
        <item>VIBRATE</item>
        <item>SOUND</item>
    </string-array>

    <string name="wifi_prompt">Choose a wifi configure</string>
    <string-array name="wifi_arrays">
        <item>ON</item>
        <item>OFF</item>
    </string-array>

    <string name="bluetooth_prompt">Choose a bluetooth configure</string>
    <string-array name="bluetooth_arrays">
        <item>ON</item>
        <item>OFF</item>
    </string-array>

    <string name="mobiledata_prompt">Choose a mobiledata configure</string>
    <string-array name="mobiledata_arrays">
        <item>ON</item>
        <item>OFF</item>
    </string-array>

    <string name="airplane_prompt">Choose a airplane configure</string>
    <string-array name="airplane_arrays">
        <item>ON</item>
        <item>OFF</item>
    </string-array>

    <string name="speech_prompt">Say something&#8230;</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="tap_on_mic">Tap on mic to speak</string>

    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>

    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>

    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>

    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="title_activity_list">ListActivity</string>
</resources>
